--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
     <string name="app_name">TodayList</string>
-    <string name="meed_an_account">Meed an account?</string>
+    <string name="need_an_account">Need an account?</string>
     <string name="sign_in">Sign In</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="sign_up">Sign Up</string>
     <string name="today_list_logo">Today List Logo</string>
+    <string name="sign_in_nav">Sign In</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_up_header">Sign Up</string>
+    <string name="name">Name</string>
+    <string name="register">Register</string>
+    <string name="re_enter_password">Re-Enter Password</string>
 </resources>
